--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -41,6 +41,7 @@ $tablet-fix-six-width: 994px; // main
 $tablet-fix-seven-width: 1001px; // main
 $tablet-fix-eight-width: 863px; // main
 $tablet-fix-nine-width: 863px; // main
+$tablet-fix-eleven-width: 881px; // main
 $desktop-width: 1200px; // main
 // ширина экрана
 
